--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
     <nav>
         <h3 class="nav-title">
-            Tanv<span class="text-primary">i</span>r Ahm<span class="text-primary">e</span>d
-        </h3>
+            Tanv<span class="text-primary">i</span>r </h3>
         <ul>
             <li><a class="dark2" href="">Portfolio</a></li>
             <li><a class="dark2" href="">Blog</a></li>
@@ -29,15 +28,40 @@
             <h4 class="banner-welcome dark2">Hi,I am</h4>
             <h1 class="banner-title dark2">Tanvir Ahmed</h1>
             <p class="banner-des dark2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments</p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <div class="btn-cv-call">
+                <button class="cv">Download CV</button>
+            <button class="contact">Contact</button>
+            </div>
         </div>
         <img class="banner-dp" src="images/tanvir.png" alt="">
 
     </div>
     </header>
     <main>
-
+<section class="about secondary-bg">
+    <h3 class="section-title">About Me</h3>
+    <p class="section-description">
+        I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+    </p>
+    <div class="about-items">
+        <div class="about-item">
+            <p class="item-name">Name</p>
+            <p class="item-description">Tanvir Ahmed</p>
+        </div>
+        <div class="about-item">
+            <p class="item-name">Email</p>
+            <p class="item-description">tanvirrefat.it@gmail.com</p>
+        </div>
+        <div class="about-item">
+            <p class="item-name">Date of Birth</p>
+            <p class="item-description">24 November 2001</p>
+        </div>
+        <div class="about-item">
+            <p class="item-name">From</p>
+            <p class="item-description">Dhamrai,Dhaka</p>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
